# lolcat_rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/lolcat/: cat.rs
