[package]
name = "lolcat"
version = "0.1.0"
edition = "2021"
authors = ["Nazmul Idris <idris@developerlife.com>"]
description = "Lolcat for strings"
license = "MIT"
repository = "https://github.com/nazmulidris/lolcat_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
atty = "0.2.14"